--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content1')">Safety</button>
         <div id="content1" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\srisailam.jpg" alt="My Safe Haven">
+            <img src="srisailam.jpg" alt="My Safe Haven">
             <div class="content-text">
                 <p>You are my safe haven. Whenever life feels overwhelming or something feels wrong, just thinking about you and "US" brings me comfort. In your arms, I feel protected from the chaos of the world, as if nothing could ever harm me. Your presence alone gives me the strength to face anything life throws my way. Nanna, you know how deeply I meant everthing written here. You are the hope and the reason I am living this life.</p>
             </div>
@@ -114,7 +114,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content2')">Understanding</button>
         <div id="content2" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\waterfall.jpg" alt="Understanding">
+            <img src="waterfall.jpg" alt="Understanding">
             <div class="content-text">
                 <p>You have a unique way of reading my heart, even when I am silent. Your ability to understand my feelings without explanation is a gift that deepens our bond every day. You know how to comfort me when I am down, cheer me up when I am lost, and give me space when I need it. With you, I never have to explain myself because you just get me in a way no one else ever has. It's this connection that makes me feel truly seen, heard, and loved. Kanna, nuvvu nannu ardam cheskunnantha inkevaru ardam cheskole, cheskoleru. I am more than happy to have you as my partner for life.</p>
             </div>
@@ -125,7 +125,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content3')">Happiness</button>
         <div id="content3" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\tea.jpg" alt="Happiness">
+            <img src="tea.jpg" alt="Happiness">
             <div class="content-text">
                 <p>Just being around you fills me with warmth and light, making everything seem better. Bujji, your smile brings me so much joy, and seeing you cry breaks my heart. I know I've caused both your tears and your laughter, but I also know it's because you love me in a way no one else does. All I wish for is to be part of every emotion you experience in life. I want to be by your side, sharing everything with you. I want to be your heart and soul, and I hope you'll always be open with me—whether it's your happiness or your sadness.</p>
             </div>
@@ -136,7 +136,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content4')">Support</button>
         <div id="content4" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\ombday.jpg" alt=Support>
+            <img src="ombday.jpg" alt=Support>
             <div class="content-text">
                 <p>Bangaru, I truly admire how you push me to do things that I never thought I would do in my life. Infact, I have made everything possible for the things you pushed me to do. Your unwavering belief in me pushes me to achieve what I never thought possible. You are always there to hold me up, reminding me that I am capable and deserving of success.</p>
             </div>
@@ -147,7 +147,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content5')">Memories</button>
         <div id="content5" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\wine.jpg" alt="Memories">
+            <img src="wine.jpg" alt="Memories">
             <div class="content-text">
                 <p>The memories we’ve created together are some of the most precious moments of my life. Every laugh, every quiet moment, whether its a simple walk or a great adventure—every moment with you becomes a beautiful memory etched in my heart forever. Whether we’re making silly inside jokes or sharing deep conversations, these moments are a part of me now. I cherish the way you make even the simplest things feel special. Every memory we create strengthens the bond between us, and I can’t wait to make countless more with you. I hold onto these memories, knowing they are the foundation of a love that only grows stronger. Bujjikonda, you know that manam kalisi unnappudu chese prathidhi nenenthala gurthu pettukoni gaduputhano the next days when I am not with you. Every moment I am with you is so so so so so percious to me.</p>
             </div>
@@ -158,7 +158,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content6')">Strength</button>
         <div id="content6" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\leebday.jpg" alt="Strength">
+            <img src="leebday.jpg" alt="Strength">
             <div class="content-text">
                 <p>Baby, as you know I am very weak mentally. When I see a problem, I always try to run away from it but it is you who made me face every challenge that comes my way. You are my strength. When I feel weak, you lift me up. Your love and support give me the courage to face anything. With you by my side, I know I can overcome any challenge, because you are the one who keeps me grounded and strong.</p>
             </div>
@@ -169,7 +169,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content7')">Acceptance</button>
         <div id="content7" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\palace.jpg" alt="Acceptance">
+            <img src="palace.jpg" alt="Acceptance">
             <div class="content-text">
                 <p>Initially, Nen chala rojulu naa manasulone dhachukunna that I fell for you ani kaani I wasn't able to control myself so naa peace kosam I confessed but I never expected it back from you. I was so surprised because nuvvu naa love accept chesthav anukole. Neeku saripada naa deggara andham, aasthi, chaduvu, gnanam emi levu but still I don't know em chusavo I am grateful for your acceptance. You love me for all that I am, flaws and all. With you, I never feel the need to hide my true self, I never feel judged or insufficient, instead I feel celebrated for my uniqueness. You embrace my flaws and imperfections showing that they are not things to be fixed but qualities to be cherished.Your unconditional love gives me the confidence to be myself and reminds me every day that I am enough just as I am.</p>
             </div>
@@ -180,7 +180,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content8')">Effort</button>
         <div id="content8" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\mybday.jpg" alt="Effort">
+            <img src="mybday.jpg" alt="Effort">
             <div class="content-text">
                 <p>This is the biggg, biggerrr and theee biggessttt quality I loveee about you. Neeku vachina rakapoina nuv pedthav chudu those efforts.. Abbabbaa I feel every woman who sees me celebrated by you feels jealous. The little things you do - remembering my favorite things or planning surprises - show me how much you care and how deeply you value our relationship!! You are always willing to go the extra mile to make me feel valued and appreciated. Your consistent effort reminds me that I am not just someone you love but someone you actively choose to invest in and that means everything to me.</p>
             </div>
@@ -191,7 +191,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content9')">Kindness</button>
         <div id="content9" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\shilparamam.jpg" alt="Kindness">
+            <img src="shilparamam.jpg" alt="Kindness">
             <div class="content-text">
                 <p>Neeku eppudu chepthanu ippudu kooda chepthunna - endhuku ra intha manchiga untav, intha manchithanam entra neeku. Kindness overloaded!! This is one of your many good qualities that I fell for. My cutiee bangaram!!! You have the kindest heart I've ever known. Whether it's helping someone out, cheering me up, or just being yourself, you always make people feel cared for. The little things you do - like remembering what I love or being there when I need you- means so much to me. It's a quality that makes you truly special. </p>
             </div>
@@ -202,7 +202,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content10')">Laughter</button>
         <div id="content10" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\peak.jpg" alt="Laughter">
+            <img src="peak.jpg" alt="Laughter">
             <div class="content-text">
                 <p>You have this amazing way of making me laugh, even when I am feeling my worst. You make me feel shy when you tease me in that playful way of yours. Areyy babuu I am crying one side saying about everything I felt bad and you do something chilipi - ufff everthing's gone. Only you can do such tricks on me. I know you will console first and do these silly things next. When I say laughter I truly mean the ways the you have to bring a smile on my face during my bad times. Appudappudu anipisthadhi bhayya nuvvu lekapothe nenem aypothano alanti situations lo ani because "YOU" are my only escape point from any disappointments I face in my life.</p>
             </div>
@@ -213,7 +213,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content11')">Friendship</button>
         <div id="content11" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\burma.jpg" alt="Friendship">
+            <img src="burma.jpg" alt="Friendship">
             <div class="content-text">
                 <p>Before anything else, we were besties, and that's what makes us so strong now. We can laugh at the dumbest things, talk about absolutely anything, and just be ourselves without any filters. You are not just my partner - you are my go-to person for everything, my partner-in-crime, and the one I trust the most. I think that's why being with you feels so natural - because we didn't just fall in love, we built this unshakeable bond as friends first.</p>
             </div>
@@ -224,7 +224,7 @@
     <div class="dropdown-container">
         <button class="dropdown" onclick="toggleContent('content12')">Future</button>
         <div id="content12" class="content">
-            <img src="C:\Users\DELL\OneDrive\Desktop\project\diwali.jpg" alt="Future">
+            <img src="diwali.jpg" alt="Future">
             <div class="content-text">
                 <p>The word "FUTURE" itself carries so much emotion - it's everything we've been waiting and hoping for. I can't stop thinking about the day when we finally get to live our forever, side by side, without ever having to say goodbye again. Every moment apart has been leading us to this, to the life we've dreamed of together - a home filled with love, laughter, and endless memories. Our future feels so close, and I can't wait to start it with you, making every dream we've shared come true. Bujji, I will say this again and again ninnu thappa aa place lo nen inkevarni uhinchukolenu. Nuvvu leni future asalu naaku future a kaadhu life a kaadhu. You mean everything to me and you are my world. I LOVE YOU SO MUCH!!!</p>
             </div>
